[package]
name = "openssl-qkd-rust"
version = "0.1.0"
authors = ["bart"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"qkd-rs" = { path = "../qkd-rs"}
cqc = { path = "../cqc" }

[lib]
name = "qkdapi"
crate-type = ["dylib"]
