[package]
name = "qkd-rust"
version = "0.1.0"
authors = ["bart"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"cqcwrappers" = { path = "../cqc-rust-wrappers"}
# cqc = "0.6"
cqc = { path = "../cqc" }

[lib]
name = "qkdapi"
crate-type = ["dylib"]
